# CPProguelike

./: CMakeLists.txt  README.md
assets/: Dirt.tsx  Grass.tsx  Water.tsx  fix.map  p16x16.map  p16x16.tmx  player.xcf
cmake/: FindSDL_ttf.cmake
src/: assetManager.cpp  assetManager.h  collision.cpp  collision.h  components.h  ecs.h  game.cpp  game.h  gameObject.cpp  gameObject.h  main.cpp  map.cpp  map.h  textureManager.cpp  textureManager.h  vector2D.cpp  vector2D.h
src/ECS/: colliderComponent.h  components.h  ecs.cpp  ecs.h  keyboardController.h  positionComponent.h  projectileComponent.h  spriteComponent.h  tileComponent.h  transformComponent.h  uiLabel.h
